fix: fixed layouts on mobile [WPRO-131]

--- a/src/app/css/variables/_variables.scss
+++ b/src/app/css/variables/_variables.scss
@@ -1,6 +1,9 @@
 #wt-omni-widget {
   --transition: 0.2s all;
 
+  // offset
+  --chat-offset: 30px;
+
   // BORDER RADIUS
   --border-radius--square: 5px;
   --border-radius--rounded: 20px;
